--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,94 +8,102 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
             text-align: center;
             padding: 20px;
         }
         h1 {
             margin-bottom: 20px;
         }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+        .dashboard {
+            display: grid;
+            grid-template-columns: 1f 2fr 1fr;
+            grid-template-rows: auto;
+            gap: 10px;
+            padding: 20px;
+            margin: auto;
+            height: 750px;
+            width: 1500px;
+            border: 2px solid black;
         }
-        button:hover {
-            background-color: #218838;
+        .led {
+            grid-column: 3 / 4;
+            grid-row: 1 / 2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 40px;
+            border: 1px solid black;
         }
-        #status {
-            margin-top: 20px;
-            font-size: 18px;
+        .profile {
+            grid-column: 1 /2;
+            grid-row: 1 / 3;
+            background-color: grey;
+        }
+        .sensors {
+            border: 1px solid black;
+            /* width: 200px; */
+            grid-column: 2 / 3;
+            grid-row: 1 / 3;
         }
 
-        #switch_on {
-            display: none;
-        }
-
-        #led_on {
-            display:none;
+        .mobile {
+            grid-column: 3 / 4;
+            grid-row: 2/3;
+            border: 1px solid black;
         }
     </style>
-    <script>
+</head>
+<body>
+    <h1>IoT Control Dashboard</h1>
+    <div class="dashboard">
+        <div class="profile">
+            <h1>Profile</h1>
+        </div>
 
-    // $(document).ready(function() { 
+        <div class="sensors">
+        </div>
 
-        let led_state = false;
-        
-        function switchLed() {
+        <div class="mobile">
+        </div>
+
+        <div class="led">
+            <img id="switch" src="../static/images/switch_false.png" height="150" alt="Switch"/>
+            <img id="light" src="../static/images/light_false.png" height="150" alt="Light bulb" />
+        </div>
+    </div>
+</body>
+
+<script>
+
+    $(document).ready(function() { 
+
+        let led_state;
+
+        fetch("/get_led_state")
+        .then(response => response.json())
+        .then(data => {
+            led_state = data.led_state;
+            setImages();
+        })
+        .catch(e => console.log("Error", e));
+
+        $("#switch").click( function() {
             led_state = !led_state;
             
-            fetch("/switch_led", {
-                method: "GET"
-            })
+            fetch("/switch_led")
             .then(response => response.json())
             .then(data => {
                 console.log(data);
-                document.getElementById('status').innerText = `LED is now ${data.led_state}`;
             })
-            .catch(error => {
-                console.error("Error:", error);
-                document.getElementById('status').innerText = 'Error switching LED state.';
-            });
+            .catch(e => console.error("Error:", e));
 
-            switchImages();
+            setImages();
+        });
+
+        function setImages() {
+            $("#switch").attr('src', `../static/images/switch_${led_state}.png`);
+            $("#light").attr('src', `../static/images/light_${led_state}.png`);
         }
-
-        function switchImages() {
-            if(led_state) {
-                $("#switch_on").show();
-                $("#switch_off").hide();
-
-                $("#led_on").show();
-                $("#led_off").hide();
-            } else {
-                $("#switch_on").hide();
-                $("#switch_off").show();
-
-                $("#led_on").hide();
-                $("#led_off").show();
-            }
-            
-        }
-    // });
+    });
     </script>
-</head>
-<body>
-    <button onclick="switchLed()">Switch LED State</button>
-    <h1>IoT Control Dashboard</h1>
-    <div id="status">Fetching LED state...</div>
-    <div onclick="switchLed()"> 
-        <img id="switch_off" src="../static/images/switch_False.png" alt="Switch OFF"/>
-        <img id="switch_on" src="../static/images/switch_True.png" alt="Switch ON"/>    
-        <img id="led_off" src="../static/images/led_off.png" alt="LED OFF" />
-        <img id="led_on" src="../static/images/led_on.png" alt="LED ON" />
-    </div>
-    
-</body>
 </html>
