--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 20px;
+            padding: 10px;
         }
         h1 {
             margin-bottom: 20px;
@@ -87,12 +87,11 @@
         })
         .catch(e => console.log("Error", e));
 
-        $("#switch").click( function() {
-            led_state = !led_state;
-            
+        $("#switch").click( function() {            
             fetch("/switch_led")
             .then(response => response.json())
             .then(data => {
+                led_state = data.led_state;
                 console.log(data);
             })
             .catch(e => console.error("Error:", e));
