add stop motor button

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -67,6 +67,8 @@
       <div class="led">
         <button class="btn-email">send email test</button>
         <button id="btn-motor" class="btn-motor">Start Motor</button>
+        <button id="btn-stop-motor" class="btn-stop-motor">Stop Motor</button>
+
         <img
           id="switch"
           src="../static/images/switch_false.png"
@@ -118,6 +120,14 @@
         })
         .catch((e) => console.error("Error:", e));
     });
+    $("#btn-stop-motor").click(function () {
+    fetch("/stop_motor")
+      .then((response) => response.json())
+      .then((data) => {
+        console.log(data.status);
+      })
+      .catch((e) => console.error("Error:", e));
+});
 
       function setImages() {
         $("#switch").attr("src", `../static/images/switch_${led_state}.png`);
