--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -84,4 +84,32 @@
   </body>
 
   <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script>
+    document.addEventListener("keydown", function (event) {
+        var rfidTagInput = document.getElementById("rfid_tag");
+        if (event.key === "Enter" && rfidTagInput.value) {
+          var rfidTag = rfidTagInput.value;
+
+          fetch("/scan", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ rfid_tag: rfidTag }),
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              if (data.success) {
+                alert(data.message); // Welcome message
+                window.location.reload(); // Refresh dashboard
+              } else {
+                alert(data.error); // Invalid card error
+              }
+            })
+            .catch((error) => console.error("Error:", error));
+
+          rfidTagInput.value = ""; // Clear input field
+        }
+      });
+  </script>
 </html>
