--- a/templates/register.html
+++ b/templates/register.html
@@ -57,14 +57,32 @@
             })
             .catch(error => console.error("Error:", error));
         });
-        document.addEventListener(
-            "keydown", function(event){
-                if(event.key.length === 1){
-                    let rfidInput = document.getElementById("rfid_tag");
-                    rfidInput += event.key;
-                }
-            }
-        );
+        document.addEventListener("keydown", function (event) {
+        var rfidTagInput = document.getElementById("rfid_tag");
+        if (event.key === "Enter" && rfidTagInput.value) {
+          var rfidTag = rfidTagInput.value;
+
+          fetch("/scan", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ rfid_tag: rfidTag }),
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              if (data.success) {
+                alert(data.message); // Welcome message
+                window.location.reload(); // Refresh dashboard
+              } else {
+                alert(data.error); // Invalid card error
+              }
+            })
+            .catch((error) => console.error("Error:", error));
+
+          rfidTagInput.value = ""; // Clear input field
+        }
+      });
     </script>
 </body>
 </html>
