--- a/templates/login.html
+++ b/templates/login.html
@@ -10,72 +10,14 @@
     />
   </head>
   <body>
+    <h1>Please scan your RFID card</h1>
     <div class="container">
       <h1>Login</h1>
       <form id="loginForm">
-        <label for="rfid_tag">RFID Tag:</label>
-        <input type="text" id="rfid_tag" name="rfid_tag" required />
-        <button type="submit">Login</button>
+        
       </form>
       <p id="error-message" style="color: red; display: none"></p>
       <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
-
-    <script>
-      document
-        .getElementById("loginForm")
-        .addEventListener("submit", function (event) {
-          event.preventDefault();
-
-          var rfidTag = document.getElementById("rfid_tag").value;
-
-          fetch("/login", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ rfid_tag: rfidTag }),
-          })
-            .then((response) => response.json())
-            .then((data) => {
-              if (data.error) {
-                document.getElementById("error-message").textContent =
-                  data.error;
-                document.getElementById("error-message").style.display =
-                  "block";
-              } else {
-                alert("Login successful!");
-                window.location.href = "/"; // Redirect to the dashboard
-              }
-            })
-            .catch((error) => console.error("Error:", error));
-        });
-      document.addEventListener("keydown", function (event) {
-        var rfidTagInput = document.getElementById("rfid_tag");
-        if (event.key === "Enter" && rfidTagInput.value) {
-          var rfidTag = rfidTagInput.value;
-
-          fetch("/scan", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ rfid_tag: rfidTag }),
-          })
-            .then((response) => response.json())
-            .then((data) => {
-              if (data.success) {
-                alert(data.message); // Welcome message
-                window.location.reload(); // Refresh dashboard
-              } else {
-                alert(data.error); // Invalid card error
-              }
-            })
-            .catch((error) => console.error("Error:", error));
-
-          rfidTagInput.value = ""; // Clear input field
-        }
-      });
-    </script>
-  </body>
+        </body>
 </html>
