--- a/templates/login.html
+++ b/templates/login.html
@@ -16,5 +16,33 @@
       <p id="error-message" style="color: red; display: none"></p>
       <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
+    <script>
+      setInterval(() =>{
+        fetch('/login', {
+          method: 'POST',
+          headers:{
+            'Content-Type':'application/json'
+          }
+        })
+        .then(response => response.json())
+        .then(data => {
+          if(data.message){
+            console.log(data.message);
+          }
+          else if(data.error){
+            console.error(data.error);
+          }
+          else if(data.welcome_message){
+            window.location.href = '/';
+            console.log("Loading dashboard")
+          }
+        })
+        .catch(error =>{
+          console.error('Error', error);
+        });
+      },
+        
+      5000);
+    </script>
         </body>
 </html>
