--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -1,46 +1,59 @@
 body {
-    font-family: Arial, sans-serif;
-    padding: 10px;
-  }
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .dashboard {
-    display: grid;
-    grid-template-columns: 1f 2fr 1fr;
-    grid-template-rows: auto;
-    gap: 10px;
-    padding: 20px;
-    margin: auto;
-    height: 750px;
-    width: 1500px;
-    border: 2px solid black;
-  }
-  .led {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    border: 1px solid black;
-  }
-  .profile {
-    grid-column: 1 /2;
-    grid-row: 1 / 3;
-    background-color: grey;
-  }
-  .sensors {
-    border: 1px solid black;
-    /* width: 200px; */
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
-    padding: 20px;
-  }
+  font-family: Arial, sans-serif;
+  padding: 10px;
+}
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.dashboard {
+  display: grid;
+  grid-template-columns: 1f 2fr 1fr;
+  grid-template-rows: auto;
+  gap: 10px;
+  padding: 20px;
+  margin: auto;
+  height: 750px;
+  width: 1500px;
+  /* border: 2px solid black; */
+}
+.led {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  height: 200px;
+}
+.profile {
+  padding: 20px;
+  grid-column: 1 /2;
+  grid-row: 1 / 3;
+}
+.sensors {
+  /* width: 200px; */
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  padding: 20px;
+}
 
-  .mobile {
-    grid-column: 3 / 4;
-    grid-row: 2/3;
-    border: 1px solid black;
-  }
+.mobile {
+  grid-column: 3 / 4;
+  grid-row: 2/3;
+  /* border: 1px solid black; */
+}
+
+.ther-hum {
+  margin-top: 20px;
+  display: flex;
+  gap: 200px;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile, .sensors, .led {
+  border-radius: 10px;
+  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
