--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,12 +14,19 @@
     <h1>IoT Control Dashboard</h1>
     <div class="dashboard">
       <div class="profile">
-        <h1>Profile</h1>
+        <h1>Welcome, {{ user['name'] }}</h1>
+        <p>Email: {{ user['email'] }}</p>
+        <p>Light Threshold: {{ user['light_threshold'] }}</p>
+        <p>Temperature Threshold: {{ user['temp_threshold'] }}</p>
+        <a href="/logout">Logout</a>
       </div>
 
+
       <div class="sensors">
-        <div id="wrapper">
-          <div id="termometer">
+        <div class="ther-hum">
+
+          <div id="wrapper">
+            <div id="termometer">
             <div id="temperature" style="height: 0" data-value="0°C"></div>
             <div id="graduations"></div>
           </div>
@@ -38,11 +45,12 @@
             </div>
           </div>
         </div>
+      </div>
 
         <div class="motor">
           <img
             id="fan"
-            src="../static/images/fan.png"
+            src="../static/images/fan2.png"
             height="150"
             alt="Fan"
           />
@@ -55,7 +63,7 @@
         <img
           id="switch"
           src="../static/images/switch_false.png"
-          height="150"
+          height="70"
           alt="Switch"
         />
         <img
@@ -65,8 +73,20 @@
           alt="Light bulb"
         />
       </div>
+
+      <div class="light-sensor">
+        <h2>Light Intensity</h2>
+        <div id="light-bar" style="height: 20px; background: #ccc; width: 100%; margin-bottom: 10px;">
+          <div id="light-fill" style="height: 100%; width: 0%; background: #ffa500;"></div>
+        </div>
+        <p>Current Intensity: <span id="light-value">0%</span></p>
+        <p>Status: <span id="light-status">OFF</span></p>
+        <p id="email-notification" style="color: green; display: none;">Email has been sent.</p>
+      </div>
+      
     </div>
   </body>
 
   <script src="{{ url_for('static', filename='script.js') }}"></script>
+
 </html>
